# d3-dna

./: .gitignore  CLAUDE.md  EVALUATIONS.md  INSTALLATION.md  README.md  SAMPLING.md  ideal_use.md  mvp.md  pyproject.toml  zenodo-readme.md
d3_dna/: __init__.py  diffusion.py  evaluator.py  io.py  sampling.py  trainer.py
d3_dna/evals/: __init__.py  metrics.py
d3_dna/models/: __init__.py  cnn.py  diffusion.py  ema.py  layers.py  transformer.py
d3_dna/modules/: __init__.py  callbacks.py  checkpoint.py  evaluator.py  precision.py  sampler.py  trainer.py
d3_dna/utils/: __init__.py  dna.py  zenodo.py
examples/deepstarr/: README.md  callbacks.py  config_conv.yaml  config_transformer.yaml  data.py  evaluate.py  oracle.py  sample.py  train.py
examples/hepg2/: README.md  callbacks.py  config.yaml  config_conv.yaml  config_transformer.yaml  data.py  eval_hepg2.sbatch  eval_hepg2_auroc.sbatch  eval_hepg2_package.sbatch  eval_hepg2_package_full.sbatch  evaluate.py  oracle.py  run_hepg2_100steps.sh  run_package_eval_full.py  run_package_eval_spmse.py  run_sample_eval.sh  run_train.sh  sample.py  sample_hepg2.sbatch  train.py
examples/k562/: README.md  callbacks.py  config.yaml  config_conv.yaml  config_transformer.yaml  data.py  evaluate.py  oracle.py  run_sample_eval.sh  run_train.sh  sample.py  train.py
examples/minimal/: README.md  callbacks.py  config.yaml  config_conv.yaml  config_transformer.yaml  data.py  evaluate.py  oracle.py  run_minimal.sh  sample.py  train.py
tests/: benchmarks.json  conftest.py  test_sample_eval.py  test_train.py  utils.py
(+71 files in other folders)
