[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "d3-dna"
version = "0.1.0"
description = "D3: DNA Discrete Diffusion -- train and sample generative models for DNA sequences"
readme = "README.md"
authors = [{ name = "Anirban Sarkar" }]
license = { text = "MIT" }
requires-python = ">=3.9"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
dependencies = [
    "torch>=2.0.0",
    "pytorch-lightning>=2.0.0",
    "omegaconf>=2.3.0",
    "numpy>=1.23.0",
    "h5py>=3.7.0",
    "tqdm>=4.64.0",
    "einops>=0.6.0",
]

[project.optional-dependencies]
flash = ["flash-attn>=2.0.0"]
logging = ["wandb>=0.16.0"]
all = ["flash-attn>=2.0.0", "wandb>=0.16.0"]
dev = ["pytest>=7.0.0", "black", "flake8"]

[tool.setuptools.packages.find]
where = ["."]
include = ["d3_dna*"]

[tool.setuptools.package-data]
"d3_dna" = ["*.yaml"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "gpu: requires a CUDA device",
    "slow: long-running tests (run with --run-slow)",
]
